# stlthumb

./: CMakeLists.txt  README.md
cmake/: CompilerSettings.cmake  FindSDL2.cmake  Libraries.cmake
src/: context.h  context_egl.cc  context_osmesa.cc  context_sdl2.cc  geo.h  image.cc  image.h  main.cc  render.cc  render.h  stl.cc  stl.h  stlbinary.cc  stltext.cc
